# snake_cube_solver

./: CMakeLists.txt  compileAndRun.sh  preload.cmake  sudoku.cc
cmake/: Findortools.cmake
scripts/: translateNames.py
src/: CMakeLists.txt
src/exe/: sudoku.cc
